library/general/gpuactivedeadline/samples/non-gpu-job/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sGpuActiveDeadline
metadata:
  name: require-gpu-deadline
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
